Fixed full page ref offset on mobile

--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -182,7 +182,6 @@ $tablet-width: 960px;
 
   .full-page {
     .embed {
-      transform: translateX(-112px);
       width: 100vw;
     }
   }
